# experiment-console

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LOCAL_RUN.md  README.md  compose.yggdrasil.yaml  pyproject.toml
backend/experiment_console/: __init__.py  agent_reconcile.py  api.py  command.py  config.py  dependency_health.py  models.py  monitor.py  planner.py  reconcile.py  redaction.py  remote.py  remote_helper.py  service.py  ssh.py  state.py  (+4 more)
config/: desktop-bridge.example.json  server-profiles.json
desktop_bridge/: __init__.py  app_server.py  cli.py  config.py  console.py  models.py  service.py  state.py  tmux.py  tunnel.py
docs/: desktop-bridge.md  yggdrasil-production.md
examples/: sweep.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: backup_yggdrasil_experiment_console.sh  deploy_yggdrasil_experiment_console.sh  exp  install_local_deps.sh  manage_codex_bridge_launchd.py  migrate_runtime_to_yggdrasil.py  rollback_yggdrasil_experiment_console.sh  run_tests.sh  runtime_console_server.py  start_local_console.sh  verify_yggdrasil_experiment_console.sh
tests/: conftest.py  test_agent_reconcile.py  test_api.py  test_bridge.py  test_bridge_hardening.py  test_control_plane.py  test_dependency_health.py  test_deployment.py  test_desktop_bridge.py  test_remote_helper.py  test_runner.py  test_runtime_console_server.py  test_service.py  test_ssh_commands.py  test_sweep_telemetry.py  test_tmux_bridge.py  test_validation.py  test_wandb_client.py  test_yggdrasil_migration.py  test_yggdrasil_packaging.py
(+21 files in other folders)
