[project]
name = "experiment-console"
version = "3.0.0"
description = "Goal-aware tmux wake bridge for Codex experiments on HCCS."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

[tool.setuptools.packages.find]
where = ["backend"]
